Added some work on a notebook

--- a/experiments/20240412_measuring_convergence_state_prep/20240412_measuring_convergence_state_prep.ipynb
+++ b/experiments/20240412_measuring_convergence_state_prep/20240412_measuring_convergence_state_prep.ipynb
@@ -37,7 +37,8 @@
     "import warnings\n",
     "import sympy as sy\n",
     "import itertools\n",
-    "import ast"
+    "import ast\n",
+    "\n"
    ]
   },
   {
