Added some work on some circuits

--- a/experiments/20240412_measuring_convergence_state_prep/20240412_measuring_convergence_state_prep.ipynb
+++ b/experiments/20240412_measuring_convergence_state_prep/20240412_measuring_convergence_state_prep.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "63f63b9b-eba2-4e17-827a-70d20386591a",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,15 @@
     "import sympy as sy\n",
     "import itertools\n",
     "import ast\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('/home/jovyan/BenchmarkingQuantinuumH1/src')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "f93e13ad-c911-4303-a6ee-0a479bd41898",
    "metadata": {},
    "outputs": [],
@@ -54,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "621c8174-afee-44da-a400-66eca2095ece",
    "metadata": {},
    "outputs": [
@@ -73,7 +76,7 @@
     "#backend = QuantinuumBackend(configuration, my_new_quantinuum_exp)\n",
     "\n",
     "my_new_quantinuum_exp = Nexus().get_project_by_name(\"UBQC\")\n",
-    "configuration = QuantinuumConfig(device_name=\"H1-1E\", user_group=\"Default\")\n",
+    "configuration = QuantinuumConfig(device_name=\"H1-1\", user_group=\"Default\")\n",
     "backend = NexusBackend(configuration, my_new_quantinuum_exp)\n",
     "\n",
     "#from pytket.extensions.quantinuum import QuantinuumBackend, QuantinuumAPIOffline\n",
@@ -83,156 +86,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
+   "id": "9d2572e3-540e-417e-9889-116c2aa0e555",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_shots = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "5b848d13-5b58-4564-b376-e992567a1fc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "circuit = cv2.circuit_01()\n",
+    "backend.default_compilation_pass().apply(circuit)\n",
+    "handle = backend.process_circuit(circuit, n_shots=n_shots)\n",
+    "result = backend.get_result(handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "c7df2917-9599-4e3e-93f4-3478dd2051b9",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "\n",
-       "\n",
-       "\n",
-       "\n",
-       "\n",
-       "<div style=\"resize: vertical; overflow: auto; height: 400px; display: block\">\n",
-       "    <iframe srcdoc=\"\n",
-       "&lt;!DOCTYPE html&gt;\n",
-       "&lt;html lang=&#34;en&#34;&gt;\n",
-       "&lt;head&gt;\n",
-       "    &lt;meta charset=&#34;UTF-8&#34;&gt;\n",
-       "    &lt;!-- Download Vue 3--&gt;\n",
-       "&lt;script type=&#34;application/javascript&#34; src=&#34;https://cdn.jsdelivr.net/npm/vue@3&#34;&gt;&lt;/script&gt;\n",
-       "&lt;!-- Download Circuit Renderer with styles --&gt;\n",
-       "&lt;script type=&#34;application/javascript&#34; src=&#34;https://unpkg.com/pytket-circuit-renderer@0.7/dist/pytket-circuit-renderer.umd.js&#34;&gt;&lt;/script&gt;\n",
-       "&lt;link rel=&#34;stylesheet&#34; href=&#34;https://unpkg.com/pytket-circuit-renderer@0.7/dist/pytket-circuit-renderer.css&#34;&gt;\n",
-       "&lt;/head&gt;\n",
-       "&lt;body&gt;\n",
-       "\n",
-       "\n",
-       "\n",
-       "    &lt;div id=&#34;circuit-display-vue-container-c0fa3b94-3f4e-4fa5-9536-265878aca3b1&#34; class=&#34;pytket-circuit-display-container&#34;&gt;\n",
-       "        &lt;div style=&#34;display: none&#34;&gt;\n",
-       "            &lt;div id=&#34;circuit-json-to-display&#34;&gt;{&#34;bits&#34;: [[&#34;c&#34;, [0]]], &#34;commands&#34;: [{&#34;args&#34;: [[&#34;q&#34;, [0]], [&#34;c&#34;, [0]]], &#34;op&#34;: {&#34;type&#34;: &#34;Measure&#34;}}], &#34;created_qubits&#34;: [], &#34;discarded_qubits&#34;: [], &#34;implicit_permutation&#34;: [[[&#34;q&#34;, [0]], [&#34;q&#34;, [0]]]], &#34;phase&#34;: &#34;0.0&#34;, &#34;qubits&#34;: [[&#34;q&#34;, [0]]]}&lt;/div&gt;\n",
-       "        &lt;/div&gt;\n",
-       "        &lt;circuit-display-container\n",
-       "                :circuit-element-str=&#34;&#39;#circuit-json-to-display&#39;&#34;\n",
-       "                :init-render-options=&#34;initRenderOptions&#34;\n",
-       "        &gt;&lt;/circuit-display-container&gt;\n",
-       "    &lt;/div&gt;\n",
-       "    &lt;script type=&#34;application/javascript&#34;&gt;\n",
-       "      const circuitRendererUid = &#34;c0fa3b94-3f4e-4fa5-9536-265878aca3b1&#34;;\n",
-       "      const displayOptions = JSON.parse(&#39;{}&#39;);\n",
-       "\n",
-       "      // Script to initialise the circuit renderer app\n",
-       "\n",
-       "const { createApp } = Vue;\n",
-       "const circuitDisplayContainer = window[&#34;pytket-circuit-renderer&#34;].default;\n",
-       "// Init variables to be shared between circuit display instances\n",
-       "if (typeof window.pytketCircuitDisplays === &#34;undefined&#34;) {\n",
-       "    window.pytketCircuitDisplays = {};\n",
-       "}\n",
-       "// Create the root Vue component\n",
-       "const app = createApp({\n",
-       "    delimiters: [&#39;[[#&#39;, &#39;#]]&#39;],\n",
-       "    components: { circuitDisplayContainer },\n",
-       "    data () {\n",
-       "      return {\n",
-       "        initRenderOptions: displayOptions,\n",
-       "      }\n",
-       "    }\n",
-       "})\n",
-       "app.config.unwrapInjectedRef = true;\n",
-       "app.mount(&#34;#circuit-display-vue-container-&#34;+circuitRendererUid);\n",
-       "window.pytketCircuitDisplays[circuitRendererUid] = app;\n",
-       "    &lt;/script&gt;\n",
-       "\n",
-       "\n",
-       "\n",
-       "&lt;/body&gt;\n",
-       "&lt;/html&gt;\n",
-       "\"\n",
-       "            width=\"100%\" height=\"100%\"\n",
-       "            style=\"border: none; outline: none; overflow: auto\"></iframe>\n",
-       "</div>\n",
-       "\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "RuntimeError",
+     "evalue": "compile-job-adnate-tall-pious-atramentaria: Circuit has encountered an error during compilation.\nCompileJobItem 0: <class 'pytket.extensions.quantinuum.backends.quantinuum.DeviceNotAvailable'>: H1-1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m circuit \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mcircuit_01()\n\u001b[0;32m----> 2\u001b[0m compiled_circuit \u001b[38;5;241m=\u001b[39m \u001b[43mbackend\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_compiled_circuit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcircuit\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m backend\u001b[38;5;241m.\u001b[39mcost(compiled_circuit,n_shots \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m)\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/pytket/extensions/nexus/backends.py:301\u001b[0m, in \u001b[0;36mNexusBackend.get_compiled_circuit\u001b[0;34m(self, circuit, optimisation_level, notes, remote, timeout)\u001b[0m\n\u001b[1;32m    271\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_compiled_circuit\u001b[39m(\n\u001b[1;32m    272\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m    273\u001b[0m     circuit: Circuit,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    277\u001b[0m     timeout: Optional[\u001b[38;5;28mfloat\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m300\u001b[39m,\n\u001b[1;32m    278\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Circuit:\n\u001b[1;32m    279\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return a single circuit compiled with default_compilation_pass (does not\u001b[39;00m\n\u001b[1;32m    280\u001b[0m \u001b[38;5;124;03m    act in place). See :py:meth:`Backend.get_compiled_circuits`.\u001b[39;00m\n\u001b[1;32m    281\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    299\u001b[0m \u001b[38;5;124;03m    :return: returns the compiled circuit\u001b[39;00m\n\u001b[1;32m    300\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 301\u001b[0m     circuit_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_compiled_circuits\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    302\u001b[0m \u001b[43m        \u001b[49m\u001b[43m[\u001b[49m\u001b[43mcircuit\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    303\u001b[0m \u001b[43m        \u001b[49m\u001b[43moptimisation_level\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    304\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnotes\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    305\u001b[0m \u001b[43m        \u001b[49m\u001b[43mremote\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    306\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    307\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    308\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m circuit_list[\u001b[38;5;241m0\u001b[39m]\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/pytket/extensions/nexus/backends.py:382\u001b[0m, in \u001b[0;36mNexusBackend.get_compiled_circuits\u001b[0;34m(self, circuits, optimisation_level, notes, remote, timeout)\u001b[0m\n\u001b[1;32m    379\u001b[0m     handler\u001b[38;5;241m.\u001b[39msubmit_compilation()\n\u001b[1;32m    381\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 382\u001b[0m     circuits_to_return \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_compile_circuits_remotely\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    383\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcircuits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimisation_level\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnotes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\n\u001b[1;32m    384\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    386\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m circuits_to_return\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/pytket/extensions/nexus/backends.py:428\u001b[0m, in \u001b[0;36mNexusBackend._compile_circuits_remotely\u001b[0;34m(self, circuits, optimisation_level, notes, timeout)\u001b[0m\n\u001b[1;32m    424\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m item\u001b[38;5;241m.\u001b[39mstatus\u001b[38;5;241m.\u001b[39merror_detail:\n\u001b[1;32m    425\u001b[0m                 error_detail \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    426\u001b[0m                     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mCompileJobItem \u001b[39m\u001b[38;5;132;01m{\u001b[39;00midx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mitem\u001b[38;5;241m.\u001b[39mstatus\u001b[38;5;241m.\u001b[39merror_detail\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    427\u001b[0m                 )\n\u001b[0;32m--> 428\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcompile_job\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00merror_detail\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    429\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m    430\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m ResourceCreationFailed \u001b[38;5;28;01mas\u001b[39;00m exc:\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: compile-job-adnate-tall-pious-atramentaria: Circuit has encountered an error during compilation.\nCompileJobItem 0: <class 'pytket.extensions.quantinuum.backends.quantinuum.DeviceNotAvailable'>: H1-1"
+     ]
     }
    ],
    "source": [
-    "circ = Circuit()\n",
-    "qr = circ.add_q_register(\"q\", 1)\n",
-    "cr = circ.add_c_register(\"c\", 1)\n",
-    "index = 0\n",
-    "circ.Measure(qr[index], cr[index])\n",
-    "render_circuit_jupyter(circ)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "3b37b8ed-f4fd-48bb-aa68-7568c6f3ea06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_shots = [1, 5, 10, 50, 100, 500, 1000, 5000, 10000] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "13a52fff-b844-4ef6-abf3-7e1508082248",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"handles.txt\", \"w\") as file:\n",
-    "    for n in n_shots:\n",
-    "        circ = Circuit()\n",
-    "        qr = circ.add_q_register(\"q\", 1)\n",
-    "        cr = circ.add_c_register(\"c\", 1)\n",
-    "        index = 0\n",
-    "        circ.Measure(qr[index], cr[index])\n",
-    "        handle = hf.compile_and_submit_job_return_handle(backend, circ, n)\n",
-    "        file.write(str(handle) + \"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "55e4133b-1667-4091-884f-3a65506a1f09",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[\"('856bc642-c107-4f4f-93cd-fc557cf89474', 2874667)\",\n",
-       " \"('211ed3f7-d383-4092-81f2-e51e02cb3ca7', 2874668)\",\n",
-       " \"('0cc0d886-6428-465e-8f00-717817a40db0', 2874669)\",\n",
-       " \"('1c2ebd02-4683-49aa-b702-d588aaa2ff7b', 2874670)\",\n",
-       " \"('aa433c0e-7291-4c10-aeaa-20085f7b8107', 2874671)\",\n",
-       " \"('de97ca23-601a-4cd6-8cca-151fc43c8c57', 2874672)\",\n",
-       " \"('719fdc7b-242d-4b17-8b0f-699dacb024ac', 2874673)\",\n",
-       " \"('2959cb0f-c5f0-4b9e-8d39-fedd12ccc5b1', 2874674)\",\n",
-       " \"('885e9450-fbea-4e22-a121-71009b902d41', 2874675)\"]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "with open(\"handles.txt\") as file:\n",
-    "    lines = [line.rstrip() for line in file]\n",
-    "\n",
-    "lines"
+    "circuit = cv2.circuit_01()\n",
+    "compiled_circuit = backend.get_compiled_circuit(circuit)\n",
+    "backend.cost(compiled_circuit,n_shots = 10)"
    ]
   },
   {
