--- a/experiments/20240412_measuring_convergence_state_prep/20240422_Circuit_01.ipynb
+++ b/experiments/20240412_measuring_convergence_state_prep/20240422_Circuit_01.ipynb
@@ -74,6 +74,18 @@
     "compiled_circuit = backend.get_compiled_circuit(circuit)\n",
     "backend.cost(compiled_circuit,n_shots = 10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1b96a33-6bbe-4bf1-a915-c20531031e20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "circuit = cv2.circuit_01()\n",
+    "backend.default_compilation_pass().apply(circuit)\n",
+    "handle = backend.process_circuit(circuit, n_shots=n_shots)"
+   ]
   }
  ],
  "metadata": {
