Updated circuit 01 script for getting cost

--- a/experiments/20240412_measuring_convergence_state_prep/Untitled.ipynb
+++ b/experiments/20240412_measuring_convergence_state_prep/Untitled.ipynb
@@ -139,6 +139,54 @@
    "source": [
     "result.get_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c5bcd63-e645-4d11-af9e-ad0c6010297e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytket import Circuit\n",
+    "from pytket.circuit.display import render_circuit_jupyter\n",
+    "from pytket.extensions.quantinuum import QuantinuumBackend, QuantinuumAPIOffline\n",
+    "\n",
+    "circ = Circuit()\n",
+    "\n",
+    "# Initialise registers\n",
+    "q_register = circ.add_q_register(name='qubits', size=1)\n",
+    "c_register = circ.add_c_register(name='conditions', size=3)\n",
+    "m_register = circ.add_c_register(name='measures', size=1)\n",
+    "\n",
+    "# Generate the random number\n",
+    "for cbit in c_register:\n",
+    "    circ.H(q_register[0])\n",
+    "    circ.Measure(q_register[0], cbit)\n",
+    "    circ.Reset(q_register[0])\n",
+    "\n",
+    "# Add a barrier to seperate from main circuit\n",
+    "circ.add_barrier(q_register)\n",
+    "\n",
+    "# Rotation\n",
+    "circ.Rz(0.25, q_register[0])\n",
+    "\n",
+    "# Random measurement rotations\n",
+    "circ.T(q_register[0], condition=c_register[0])\n",
+    "circ.S(q_register[0], condition=c_register[1])\n",
+    "circ.Z(q_register[0], condition=c_register[2])\n",
+    "\n",
+    "circ.Measure(q_register[0], m_register[0])\n",
+    "\n",
+    "render_circuit_jupyter(circ)\n",
+    "\n",
+    "api_offline = QuantinuumAPIOffline()\n",
+    "backend = QuantinuumBackend(device_name=\"H1-1LE\", api_handler = api_offline)\n",
+    "compiled_circ = backend.get_compiled_circuit(circ, optimisation_level=0)\n",
+    "results = backend.run_circuit(compiled_circ, n_shots=1)\n",
+    "\n",
+    "print(results.get_counts(cbits=m_register))\n",
+    "print(results.get_counts(cbits=c_register))"
+   ]
   }
  ],
  "metadata": {
