Worked on circuit 01, 02 and hadarmard randomness

--- a/experiments/20240412_measuring_convergence_state_prep/20240424_Circuit_02.ipynb
+++ b/experiments/20240412_measuring_convergence_state_prep/20240424_Circuit_02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "8d2f1c9c-ea75-4b2c-b196-7c77a95e7456",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,9 @@
     "today_date = datetime.today().strftime('%Y%m%d')\n",
     "data_path = '/home/jovyan/BenchmarkingQuantinuumH1/data/'\n",
     "file_name = 'circuit_02_output_per_shots.csv'\n",
-    "data_name = data_path + today_date + '_'+ file_name\n",
+    "emulator_name = 'H1-1E'\n",
+    "data_name = data_path + today_date + '_'+ emulator_name + '_' + file_name\n",
+    "\n",
     "\n",
     "\n",
     "import helper_functions as hf\n",
@@ -42,33 +44,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "cfb40a17-c14f-4001-bef8-05d0cadbf97a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Started using project with name: UBQC\n"
+     ]
+    }
+   ],
    "source": [
-    "#my_new_quantinuum_exp = Nexus().get_project_by_name(\"UBQC\")\n",
-    "#configuration = QuantinuumConfig(device_name=\"H1-1SC\", user_group=\"Default\")\n",
-    "#backend = NexusBackend(configuration, my_new_quantinuum_exp)\n",
+    "my_new_quantinuum_exp = Nexus().get_project_by_name(\"UBQC\")\n",
+    "configuration = QuantinuumConfig(device_name=\"H1-1E\", user_group=\"Default\")\n",
+    "backend = NexusBackend(configuration, my_new_quantinuum_exp)\n",
     "\n",
-    "from pytket.extensions.quantinuum import QuantinuumBackend, QuantinuumAPIOffline\n",
-    "api_offline = QuantinuumAPIOffline()\n",
-    "backend = QuantinuumBackend(device_name=\"H1-1LE\", api_handler = api_offline)"
+    "#from pytket.extensions.quantinuum import QuantinuumBackend, QuantinuumAPIOffline\n",
+    "#api_offline = QuantinuumAPIOffline()\n",
+    "#backend = QuantinuumBackend(device_name=\"H1-1LE\", api_handler = api_offline)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "9f9ef2fd-c451-4cd2-a034-a8bf8be549e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_shots = 100"
+    "n_shots = 5000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "9698a327-4811-44fa-9071-7bfc7fdccee4",
    "metadata": {},
    "outputs": [],
@@ -79,19 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "c6e55c57-10d9-471d-95a6-a28f7c0748d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#backend.cost(compiled_circuit, n_shots = 10, syntax_checker = \"H1-1SC\")\n",
-    "from pytket.extensions.quantinuum import QuantinuumBackend\n",
-    "q_backend = QuantinuumBackend(device_name=\"H1-1E\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "4f2fcd6e-4cb5-40bc-9a9c-913e89d9369d",
    "metadata": {},
    "outputs": [],
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "22f713aa-1909-4d5b-9fa2-5e93574156ae",
    "metadata": {},
    "outputs": [],
@@ -111,19 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "6a5eac60-bb44-46ac-8aa5-dfe70dec5d03",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jovyan/BenchmarkingQuantinuumH1/src/helper_functions.py:202: Warning: X and Y bits are both 0, no basis change\n",
-      "  warnings.warn(\"X and Y bits are both 0, no basis change\", Warning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class_ran_bit = results.get_shots(cbits = circuit.get_c_register(name=\"classical_reg\"))\n",
     "pi_res_rand_bit = results.get_shots(cbits = circuit.get_c_register(name='pi_rotation_condition'))\n",
@@ -145,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "id": "43826fc1-b32d-4ae9-a335-4fcf49f81249",
    "metadata": {},
    "outputs": [],
@@ -155,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "id": "e0881a94-e85b-48b4-802d-b7f76b34f58c",
    "metadata": {},
    "outputs": [],
@@ -166,30 +156,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b64ac9c-8726-4238-b850-810c1d6bce67",
+   "id": "c6e55c57-10d9-471d-95a6-a28f7c0748d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "shot_list = range(1, 5000, 500)\n",
-    "cost_est = [q_backend.cost(compiled_circuit, n_shots = i, syntax_checker = \"H1-1SC\") for i in shot_list]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa14402c-5fd9-4d76-9b7a-d185e4d6e69d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot scatter plot\n",
-    "plt.scatter(shot_list, cost_est)\n",
-    "\n",
-    "# Add labels and title\n",
-    "plt.xlabel('Number of shots')\n",
-    "plt.ylabel('Estimated Cost')\n",
-    "\n",
-    "# Show plot\n",
-    "plt.show()"
+    "#backend.cost(compiled_circuit, n_shots = 10, syntax_checker = \"H1-1SC\")\n",
+    "from pytket.extensions.quantinuum import QuantinuumBackend\n",
+    "q_backend = QuantinuumBackend(device_name=\"H1-1E\")\n",
+    "q_backend.cost(compiled_circuit, n_shots = 5000, syntax_checker = \"H1-1SC\")"
    ]
   }
  ],
